# random-apc-plugins

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENCE.md  README.md  package.json
.agent/: settings.local.json
.agent/rules/: juce-build-protocols.md
.agent/skills/skill_design_webview/: KNOWN-ISSUES-AND-SOLUTIONS.md  SKILL_OLD.md
.agent/skills/skill_ideation/: SKILL.md
.agent/skills/skill_packaging/: SKILL.md
.agent/troubleshooting/: _template.md
.agent/troubleshooting/resolutions/: audio-processing-issues.md  crash-002-cloudwash-SOLVED.md  webview-attachment-order-crash.md  webview-black-screen-resources.md  webview-es6-modules-fail.md
.agent/workflows/: debug.md  new.md  status.md
.claude/: WEBVIEW-DOCUMENTATION-SUMMARY.md
.claude/guides/: state-management-guide.md
.claude/rules/: agent.md  file-naming-conventions.md  juce-build-protocols.md
.claude/skills/debug/: SKILL.md
.claude/skills/plan/: SKILL.md
.claude/skills/skill_design_webview/: KNOWN-ISSUES-AND-SOLUTIONS.md
.claude/skills/skill_testing/: SKILL.md
.claude/skills/test/: SKILL.md
.claude/troubleshooting/resolutions/: juce8-header-migration.md  performance-001-mutex-blocking.md  webview-es6-modules-fail.md  webview-runtime-crash.md
.claude/workflows/: debug.md  ship.md
.github/: DISCUSSIONS_WELCOME.md
.github/workflows/: build-release.yml  build_bridges.yml  npm-publish.yml
.kilocode/guides/: documentation-system.md
.kilocode/skills/skill_design_webview/: KNOWN-ISSUES-AND-SOLUTIONS.md  WEBVIEW-PRODUCTION-GUIDE.md
.kilocode/troubleshooting/: known-issues.yaml
.kilocode/troubleshooting/resolutions/: crash-001-nullptr-parameter.md  crash-002-cloudwash-access-violation.md  webview-009-slow-initialization.md  webview-black-screen-resources.md  webview-juce8-api-changes.md
.kilocode/workflows/: resume.md
_tools/pluginval/: CHANGELIST.md  CLAUDE.md  CMakeLists.txt  FUNDING.md  README.md  ROADMAP.md
_tools/pluginval/.github/: FUNDING.yml
_tools/pluginval/Source/: CommandLine.cpp  Main.cpp  MainComponent.cpp  MainComponent.h  PluginTests.cpp  PluginTests.h  PluginvalLookAndFeel.h  RTCheck.h  StrictnessInfoPopup.h  Validator.cpp
_tools/pluginval/docs/: Command line options.md
_tools/visage/: .gitattributes  .gitignore  CMakeLists.txt  README.md
_tools/visage/cmake/: testing_framework.cmake
_tools/visage/examples/: CMakeLists.txt  emscripten_template.html  main.cpp
_tools/visage/visage_app/: CMakeLists.txt  application_editor.cpp  application_editor.h  application_window.cpp  application_window.h  window_event_handler.cpp  window_event_handler.h
_tools/visage/visage_file_embed/: CMakeLists.txt  embed_file.cmake  embedded_file.h
_tools/visage/visage_graphics/: CMakeLists.txt  animation.h  canvas.cpp  canvas.h  color.cpp  color.h  font.cpp  font.h  gradient.cpp  gradient.h  graphics_caches.cpp  graphics_caches.h  graphics_utils.cpp  graphics_utils.h  image.cpp  image.h  layer.cpp  layer.h  palette.cpp  palette.h  path.cpp  path.h  post_effects.cpp  post_effects.h  region.cpp  region.h  renderer.cpp  renderer.h  screenshot.cpp  screenshot.h  shape_batcher.cpp  shape_batcher.h  shapes.cpp  shapes.h  svg.cpp  svg.h  theme.h  uniforms.h  windowless_context.h
_tools/visage/visage_ui/: CMakeLists.txt  events.cpp  events.h  frame.cpp  frame.h  layout.cpp  layout.h  popup_menu.cpp  popup_menu.h  scroll_bar.cpp  scroll_bar.h  svg_frame.cpp  svg_frame.h
_tools/visage/visage_ui/macos/: menu_bar.mm
_tools/visage/visage_ui/tests/: events_tests.cpp  frame_tests.cpp  popup_menu_tests.cpp  scroll_bar_tests.cpp  undo_history_tests.cpp
_tools/visage/visage_utils/: CMakeLists.txt  child_process.h  clone_ptr.h  defines.h  dimension.h  (+9 more)
assets/: APC_ASCII.txt
build-mingw-ColourBrickwallScream/: CMakeCache.txt  Makefile  cmake_install.cmake
common/: VisageJuceHost.h
design_library/: manifest.json
design_library/amber-signal/: README.md  design-system.json  index.html  script.js  style-guide.html  style.css
design_library/neogrid-minimal/: README.md  design-system.json  index.html  script.js  style-guide.html  style.css
docs/: FAQ.md  PROJECT_STRUCTURE.md  README.md  build-system.md  command-reference.md  github-actions.md  icon-management-guide.md  installer-creation.md  mingw-cross-compilation.md  plugin-development-lifecycle.md  ship-workflow.md  state-management-deep-dive.md  troubleshooting-guide.md  webview-framework.md
notes/: PLAN1-macos.md  PLAN1-results.md
plugins/CloudWash/: CMakeLists.txt  clear_ableton_cache.ps1  status.json
plugins/ColourBrickwallScream/: CMakeLists.txt  status.json
plugins/ColourBrickwallScream/.ideas/: architecture.md  creative-brief.md  parameter-spec.md  plan.md
plugins/ColourBrickwallScream/Design/: v1-style-guide.md  v1-test.html  v1-ui-spec.md
plugins/ColourBrickwallScream/Source/: ParameterIDs.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/ColourBrickwallScream/Source/ui/public/: index.html
plugins/ColourBrickwallScream/Source/ui/public/js/: index.js
plugins/gnarly2/: CMakeLists.txt  status.json
plugins/gnarly3/: status.json
plugins/nf_gnarly/: CMakeLists.txt  status.json
scripts/: add-icon-to-exe.ps1  backup.ps1  backup.sh  build-and-install.ps1  build-and-install.sh  build-mingw-cross.sh  copy-agent-folders.ps1  error-detection.ps1  error-detection.sh  fetch-webview2-sdk.sh  list-folder-structure.ps1  pluginval-integration.ps1  preview-design.ps1  preview-design.sh  rollback.ps1  rollback.sh  setup.ps1  state-management.ps1  state-management.sh  system-check.ps1  system-check.sh  terminal-monitoring.ps1  validate-plugin-status.ps1  validate-state-management.ps1  validate-visage-setup.ps1  validate-webview-member-order.ps1  validate-webview-setup.ps1
scripts/installer/: create-macos-installer.sh  create-windows-installer.ps1  installer-template.iss
templates/: CMakeLists.txt.template  CMakeLists.visage.template  LICENSE.txt.template
toolchains/: mingw-w64-x86_64.cmake
webview2_sdk/: Microsoft.Web.WebView2.nuspec
webview2_sdk/_rels/: .rels
(+259 files in other folders)
